[tool.poetry]
name = "photomaker"
version = "0.2.0"
description = "PhotoMaker: Customizing Realistic Human Photos via Stacked ID Embedding"
authors = ["Li, Zhen", "Cao, Mingdeng", "Wang, Xintao", "Qi, Zhongang", "Cheng, Ming-Ming", "Shan, Ying"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "photomaker" },
    { include = "gradio_demo" },
]

[tool.poetry.dependencies]
python = ">=3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
target-version = "py38"
extend-exclude = ["__pycache__", "*.pyc", "*.egg-info", ".cache"]
select = ["E", "F", "W", "C90", "I", "UP", "B", "C4", "RET", "RUF", "SIM"]
ignore = [
    "UP006",  # Use list instead of typing.List
    "UP007",  # Use X | Y instead of Union
    "UP009",
    "UP035",
    "UP038",
    "E402",   # Module level import not at top
    "RET504"  # Unnecessary variable assignment before return
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 119
skip-string-normalization = true